--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,19 @@
-
-
 /* Use CSS to right-align the text in the "Amount" column.
 Hint: You'll want to assign a class to the associated <th> and <td> tags
 in your index.html and script.js files. */
 
 .chart {
   height: 500px;
+}
+
+.amount {
+    text-align: right;
+}
+
+h3 {
+    font-size: 17px;
+}
+
+footer {
+    font-style: italic;
 }
