floated footer to push toward bottom regardless of chart height, i.e. if on a phone/tablet,etc.

--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,9 @@
 Hint: You'll want to assign a class to the associated <th> and <td> tags
 in your index.html and script.js files. */
 
-.chart {
+/*.chart {
   height: 500px;
-}
+}*/
 
 .amount {
     text-align: right;
@@ -16,4 +16,5 @@ h3 {
 
 footer {
     font-style: italic;
+    float: left;
 }
